jrobin: Disable DeallocationHelper for Java 9